# oxide_eval

./: Cargo.toml  README.md
src/: error.rs  lib.rs  semver.rs  semver_wrapper.rs  util.rs
src/bin_op/: addition.rs  bitwise.rs  compare.rs  division.rs  equality.rs  exponential.rs  mod.rs  multiplication.rs  remainder.rs  subtraction.rs  util.rs
src/context/: entry.rs  mod.rs
src/math/: mod.rs
src/method/: array.rs  mod.rs  string.rs
src/unary/: bitwise_not.rs  mod.rs  negation.rs  plus.rs
tests/: array_method.rs  basic.rs  bitwise.rs  math_function.rs  method.rs  semver.rs
