[package]
name = "oxide_eval"
version = "0.1.0"
edition = "2021"
license = "gnu"
authors = ["renixiel@gmail.com"]
description = "Oxide Eval is a simple Javascript Evaluator based on oxc."
repository = "https://github.com/respectZ/oxide_eval/"
readme = "README.md"
keywords = ["eval", "evaluator", "js", "javascript", "js-eval"]

[dependencies]
oxc = "^0.66.0"
serde_json = "~1"
anyhow = "~1.0.98"
semver = { version = "~1", features = ["serde"], optional = true }
serde = { version = "~1", features = ["derive"], optional = true }

[dependencies.regex]
version = "~1"
optional = true


[features]
string = ["regex"]
array = []
math = []
semver-support = ["semver", "serde"]